# coreink-rust

./: CMakeLists.txt  Cargo.toml  build.rs  diagram.json  wokwi.toml  wrapper.h
.devcontainer/: Dockerfile  devcontainer.json
docs/: README.md
include/: sdkconfig.h
my_m5_project/: CMakeLists.txt  sdkconfig
my_m5_project/main/: CMakeLists.txt
scripts/: flash.sh
src/: main.rs
